--- a/completed/ex7_complete/front-end/src/app/tasks/tasks.component.html
+++ b/completed/ex7_complete/front-end/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 <form>
-    <div class="row mb-2">
+    <div class="row col-mb-2">
         <div class="offset-2 col-md-2">
             <!-- Trigger the modal with a button -->
             <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">New</button>
